# DoppeltVerketteteListe

./: .gitignore  CMakeLists.txt
include/: AddressManager.h  DoublyLinkedList.h
src/: AddressManager.cpp  DoublyLinkedList.cpp  main.cpp
